tests/snapshots/wallets/transfer/exists.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - wallets
    - transfer
    - wallet
    - 1DrDyTr9RpRsQnDnXo2YRiPzPW4ooHX5LLoqXrqfMrpQH
    - "500000000000000000"
---
success: true
exit_code: 0
----- stdout -----
{
  "fromGroup": 2,
  "toGroup": 0,
  "txId": "3ef8db21e99e5e5c052e1e6308520457c34e016cebccb69e8f5ba9a8dcf041b4"
}

----- stderr -----
