tests/snapshots/wallets/transfer/missing_one_param.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - wallets
    - transfer
    - wallet
    - 1DrDyTr9RpRsQnDnXo2YRiPzPW4ooHX5LLoqXrqfMrpQH
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <AMOUNT>

Usage: kermit wallets transfer <WALLET_NAME> <TO_ADDRESS> <AMOUNT>

For more information, try '--help'.
