tests/snapshots/wallets/transfer/missing_two_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - wallets
    - transfer
    - wallet
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <TO_ADDRESS>
  <AMOUNT>

Usage: kermit wallets transfer <WALLET_NAME> <TO_ADDRESS> <AMOUNT>

For more information, try '--help'.
