tests/snapshots/wallets/transfer/too_small_value.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - wallets
    - transfer
    - wallet
    - 1DrDyTr9RpRsQnDnXo2YRiPzPW4ooHX5LLoqXrqfMrpQH
    - "100"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Tx output value is too small, avoid spreading dust
